--- a/comdirect/tpl/transaction.tmpl
+++ b/comdirect/tpl/transaction.tmpl
@@ -1,3 +1,3 @@
 REMITTER,DEPTOR,BOOKING DATE,STATUS,TYPE,VALUE,UNIT
 {{- range .Values}}
-{{holderName .Creditor.HolderName}},{{.BookingDate}},{{.BookingStatus}},{{.TransactionType.Text}},{{formatAmountValue .Amount}},{{.Amount.Unit}}{{end}}
+"{{holderName .Remitter.HolderName}}","{{.Creditor.HolderName}}",{{.BookingDate}},{{.BookingStatus}},{{.TransactionType.Text}},{{formatAmountValue .Amount}},{{.Amount.Unit}}{{end}}
